@@ -1,5 +1,11 @@
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/ChangeLog,v 1.538 2006/01/27 22:57:16 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/ChangeLog,v 1.539 2006/01/28 22:02:08 rocket Exp $
+
+  28 Jan 2006; Eric Edgar <rocket@gentoo.org>
+  -livecd/cdtar/yaboot-1.3.11-ppc-cdtar.tar.bz2,
+  +livecd/cdtar/yaboot-1.3.11-ppc-cdtar-r1.tar.bz2,
+  targets/support/bootloader-setup.sh:
+  ppc cdtar update; ppc64 bootloader updates
 
   27 Jan 2006; Chris Gianelloni <wolf31o2@gentoo.org> catalyst,
   targets/support/create-iso.sh:
